; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/rtwn/rtl8188e/extr_r88e_fw.c_r88e_set_rsvd_page.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/rtwn/rtl8188e/extr_r88e_fw.c_r88e_set_rsvd_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtwn_softc = type { i32 }
%struct.r88e_fw_cmd_rsvdpage = type { i32, i32, i32, i64, i64 }

@R88E_CMD_RSVD_PAGE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @r88e_set_rsvd_page(%struct.rtwn_softc* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.rtwn_softc*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.r88e_fw_cmd_rsvdpage, align 8
  store %struct.rtwn_softc* %0, %struct.rtwn_softc** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %6, align 4
  %11 = getelementptr inbounds %struct.r88e_fw_cmd_rsvdpage, %struct.r88e_fw_cmd_rsvdpage* %9, i32 0, i32 0
  store i32 %10, i32* %11, align 8
  %12 = getelementptr inbounds %struct.r88e_fw_cmd_rsvdpage, %struct.r88e_fw_cmd_rsvdpage* %9, i32 0, i32 4
  store i64 0, i64* %12, align 8
  %13 = load i32, i32* %7, align 4
  %14 = getelementptr inbounds %struct.r88e_fw_cmd_rsvdpage, %struct.r88e_fw_cmd_rsvdpage* %9, i32 0, i32 1
  store i32 %13, i32* %14, align 4
  %15 = load i32, i32* %8, align 4
  %16 = getelementptr inbounds %struct.r88e_fw_cmd_rsvdpage, %struct.r88e_fw_cmd_rsvdpage* %9, i32 0, i32 2
  store i32 %15, i32* %16, align 8
  %17 = getelementptr inbounds %struct.r88e_fw_cmd_rsvdpage, %struct.r88e_fw_cmd_rsvdpage* %9, i32 0, i32 3
  store i64 0, i64* %17, align 8
  %18 = load %struct.rtwn_softc*, %struct.rtwn_softc** %5, align 8
  %19 = load i32, i32* @R88E_CMD_RSVD_PAGE, align 4
  %20 = call i32 @r88e_fw_cmd(%struct.rtwn_softc* %18, i32 %19, %struct.r88e_fw_cmd_rsvdpage* %9, i32 32)
  ret i32 %20
}

declare dso_local i32 @r88e_fw_cmd(%struct.rtwn_softc*, i32, %struct.r88e_fw_cmd_rsvdpage*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
